# netrek-client-cow

./: .gitignore  CHANGES  CLAUDE.md  COPYING  COW.DOC  ChangeLog  INSTALL  INSTALL.SGI  Makefile  NETREK.RC  NETREK.WRI  NEWMACRO.DOC  README  README.1.02  README.1.03  README.2.00  README.2.02  README.3.00  README.3.01  README.CVS  README.html  README.md  README.releasing  REPOSITORIES  SHORT_PACKETS.DOC  TODO  TREK.CUR  WARN.CUR  Wlib.h  XTREKRC.example  aclocal.m4  audio.c  audio.h  autogen.sh  badversion.h  beeplite.c  beeplite.h  bitmaps.h  camera.c  camera.h  (+175 more)
bugs/: issue-05f15891c7925eb1e619b5f586b3332fb41ac8a1.yaml  issue-0791f468d9d3a93961f2544a81cc56ca78871ee4.yaml  issue-36b230e65ce96ee672dc0eb91e44c8df37210816.yaml  issue-766871fb6cab961f1138c8d72ccbb0523f33833e.yaml  issue-7faa061983888bfb5a8d726aed2102b5509d9e62.yaml  issue-9296e15277906b71eaf1fe232f4dbea2aff0ae61.yaml  issue-9b966bd6ed186fa7d55efa6062582065a390b7b7.yaml  issue-9ceb1d26257c5d3a7d51dd49c53512ebc202ec88.yaml  issue-a19d138905627f0e951c84c1b8952b59b2b9c563.yaml  issue-a2144bad141edf53d0816574022d3adeb23cd8d6.yaml  issue-c42a03cab6af30875bf7d1cb0498aafc71a6e380.yaml  issue-cf021a8368b4823b4d5e9b4a57056101f6d14763.yaml  issue-e4484429926bc99a6ddcfc7846f9fe82fa74355e.yaml  issue-eff2eac72769e6049f126199609c46a0fede25b8.yaml  issue-f0762f9b5722dd96085386a2cab1853ec0fc1e22.yaml  issue-f225d7e3d4fa574703fdc8a7c051a8cb260afeb6.yaml  project.yaml
debian/: README.Debian  changelog  control  copyright  docs  find-key.sh  menu  netrek-client-cow.6  netrek-client-cow.copyright  netrek-client-cow.docs  netrek-client-cow.examples  netrek-client-cow.man  netrek-client-cow.manpages  rules  watch
html/: component-netrek-client-cow.html  index.html  issue-05f15891c7925eb1e619b5f586b3332fb41ac8a1.html  issue-0791f468d9d3a93961f2544a81cc56ca78871ee4.html  issue-36b230e65ce96ee672dc0eb91e44c8df37210816.html  issue-766871fb6cab961f1138c8d72ccbb0523f33833e.html  issue-7faa061983888bfb5a8d726aed2102b5509d9e62.html  issue-9296e15277906b71eaf1fe232f4dbea2aff0ae61.html  issue-9b966bd6ed186fa7d55efa6062582065a390b7b7.html  issue-9ceb1d26257c5d3a7d51dd49c53512ebc202ec88.html  issue-a19d138905627f0e951c84c1b8952b59b2b9c563.html  issue-a2144bad141edf53d0816574022d3adeb23cd8d6.html  issue-c42a03cab6af30875bf7d1cb0498aafc71a6e380.html  issue-e4484429926bc99a6ddcfc7846f9fe82fa74355e.html  issue-eff2eac72769e6049f126199609c46a0fede25b8.html  issue-f225d7e3d4fa574703fdc8a7c051a8cb260afeb6.html  release-3.2.10.html  release-3.2.11.html  release-3.2.9.html  unassigned.html
java/: COW.java  COWImpl.c  CowApplet.java  Makefile  Test.html  plugin.c  stubs.c
java/_gen/: COW.h  java_lang_Class.h  java_lang_String.h
java/_stubs/: COW.c  java_lang_Class.c  java_lang_String.c  netscape_plugin_Plugin.c
macos/: Info.plist  netrek-launcher.sh
pixmaps/Fed/: AS.xpm  AS0.XPM  AS16.XPM  AS32.XPM  ASBC16.XPM  ASBC32.XPM  ASbc0.xpm  ASpara.xpm  AT.xpm  AT0.XPM  AT16.XPM  ATBC16.XPM  ATBC32.XPM  ATbc0.xpm  BB.xpm  BB0.XPM  BB16.XPM  BB32.XPM  BBBC16.XPM  BBBC32.XPM  BBbc0.xpm  BBpara.xpm  CA.xpm  CA0.XPM  CA16.XPM  CA32.XPM  CABC16.XPM  CABC32.XPM  CAbc0.xpm  CApara.xpm  DD.xpm  DD0.XPM  DD16.XPM  DD32.XPM  DDBC16.XPM  DDBC32.XPM  DDbc0.xpm  DDpara.xpm  GA.xpm  GA0.XPM  (+16 more)
pixmaps/Ind/: AS.xpm  AT.xpm  AT0.XPM  BB0.XPM  CA.xpm  CA0.XPM  DD.xpm  DD0.XPM  GA.xpm  GA0.XPM  SC.xpm  SC0.XPM  SCpara.xpm  plasma.xpm  plasma_det.xpm  torp.xpm  torp_det.xpm
pixmaps/Kli/: AS16.XPM  AS32.XPM  ASBC16.XPM  ASBC32.XPM  ASbc0.xpm  ASpara.xpm  AT.xpm  AT0.XPM  AT16.XPM  ATBC16.XPM  ATBC32.XPM  ATbc0.xpm  BB.xpm  BB0.XPM  BB16.XPM  BB32.XPM  BBBC16.XPM  BBBC32.XPM  BBbc0.xpm  BBpara.xpm  CA.xpm  CA0.XPM  CA16.XPM  CA32.XPM  CABC16.XPM  CABC32.XPM  CAbc0.xpm  CApara.xpm  DD.xpm  DD0.XPM  DD16.XPM  DD32.XPM  DDBC16.XPM  DDBC32.XPM  DDbc0.xpm  DDpara.xpm  GA.xpm  GA0.XPM  GA16.XPM  GA32.XPM  (+15 more)
pixmaps/Misc/: CLOAK2.XPM  CLOAK3.XPM  Explosion2.xpm  cloak1.xpm  explosion.orig.xpm  explosion.xpm  map_back.xpm  sbexplosion.orig.xpm  sbexplosion.xpm
pixmaps/Ori/: AS16.XPM  AS32.XPM  ASBC16.XPM  ASBC32.XPM  ASbc0.xpm  ASpara.xpm  AT.xpm  AT0.XPM  AT16.XPM  ATBC16.XPM  ATBC32.XPM  ATbc0.xpm  BB16.XPM  BB32.XPM  BBBC16.XPM  BBBC32.XPM  BBbc0.xpm  BBpara.xpm  CA16.XPM  CA32.XPM  CABC16.XPM  CABC32.XPM  CAbc0.xpm  CApara.xpm  DD.xpm  DD16.XPM  DDBC16.XPM  DDBC32.XPM  DDbc0.xpm  DDpara.xpm  GA.xpm  GA0.XPM  GA16.XPM  GA32.XPM  SB.xpm  SBbc0.xpm  SC.xpm  SC16.XPM  SCBC16.XPM  SCBC32.XPM  (+11 more)
pixmaps/Planets/Map/: AGRI.xpm  Fed.xpm  Ind.xpm  Kli.xpm  Ori.xpm  ROCK.xpm  Rom.xpm  UNKN.xpm  army.xpm  fuel.xpm  repair.xpm
pixmaps/Rom/: AS.xpm  AS16.XPM  ASBC16.XPM  ASBC32.XPM  ASbc0.xpm  AT.xpm  AT0.XPM  AT16.XPM  ATBC16.XPM  ATBC32.XPM  ATbc0.xpm  BB.xpm  BB0.XPM  BB16.XPM  BB32.XPM  BBBC16.XPM  BBBC32.XPM  BBbc0.xpm  CA.xpm  CA0.XPM  CA16.XPM  CA32.XPM  CABC16.XPM  CABC32.XPM  CAbc0.xpm  DD.xpm  DD16.XPM  DDBC16.XPM  DDBC32.XPM  DDbc0.xpm  GA.xpm  GA0.XPM  GA16.XPM  GA32.XPM  SB.xpm  SBbc0.xpm  SC.xpm  SC0.XPM  SC16.XPM  SC32.XPM  (+9 more)
po/: ChangeLog  Makevars  TODO
sdl2/: sdl2sprite.c  sdl2sprite.h  sdl2window.c  sdl2window.h
spike/: README
spike/cow-test/: Makefile  README  sdl_test.c
spike/sdlwave/: Makefile  README  sdlwav.c
tests/: .gitignore  Makefile  build  stubs.c  test_drawing.c  test_event_pipe.c  test_event_translation.c  test_render_png.c  test_sprite.c  test_text.c  test_window_mgmt.c
tests/unity/: unity.c  unity.h
win32/: cr  gmp.h  mmsystem.h  mswindow.c  simx.c  simx.h  uncr  winmain.c  winsndlib.c  winsprite.c  xpm.h
x11/: x11window.c
